--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     /*colors*/
     --white-color:#fff;
     --dark-color:#252525;
-    --primary-color:#33020c;
+    --primary-color:#98e0ff;
     --secondary-color:#f3961c;
     --light-pink-color:#faf4f5;
     --medium-grey-color:#ccc;
