--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
     /*colors*/
     --white-color:#fff;
     --dark-color:#252525;
-    --primary-color:#98e0ff;
-    --secondary-color:#f3961c;
+    --primary-color:#e16913;
+    --secondary-color:#350c0f;
     --light-pink-color:#faf4f5;
     --medium-grey-color:#ccc;
 
@@ -124,7 +124,9 @@ header .navbar{
 /*hero section styling*/
 .hero-section {
     min-height: 100vh;
-    background: var(--primary-color);
+    background-image: url("./images/background1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover
 }
 
 .hero-section .section-content {
@@ -132,7 +134,7 @@ header .navbar{
     align-items: center;
     min-height: 100vh;
     color: var(--white-color);
-    justify-content: space-between;
+    justify-content: space-evenly;
 
 }
 
@@ -146,11 +148,13 @@ header .navbar{
    max-width: 70%;
    font-weight: var(--font-weight-semibold);
    font-size: var(--font-size-xl);
+   color: #252525;
 }
 .hero-section .hero-details .description{
-    max-width: 70%;
+    max-width: 90%;
     margin: 24px 0 40px;
     font-size: var(--font-size-m);
+    color: var(--dark-color);
 }
 
 .hero-section .hero-details .buttons{
@@ -192,7 +196,7 @@ header .navbar{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height:100vh;
     object-fit:cover;
     z-index: -1;
 }
@@ -231,7 +235,7 @@ header .navbar{
     justify-content: center;
 }
 .about-section .social-link-list .social-link {
-    color: var(--primary-color);
+    color: var(--dark-color);
     font-size: var(--font-size-l);
     transition: 0.2s ease;
 }
@@ -340,7 +344,7 @@ transform: scale(1.3);
     background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
     color: var(--white-color);
     transform: translateY(100%);
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
 }
 
 .brand-card:hover .brand-overlay {
