--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --white-color:#fff;
     --dark-color:#252525;
     --primary-color:#e16913;
-    --secondary-color:#350c0f;
+    --secondary-color:#2c0507;
     --light-pink-color:#faf4f5;
     --medium-grey-color:#ccc;
 
